# TMID

./: .gitignore  .group_config  .task_config  CMakeLists.txt  README.md  client  client.cpp  envio.txt  files.cpp  header.cpp  parser.cpp  parser_router.cpp  retorno.txt  server  server.cpp  tmdi-install.cpp  tmid-install
include/commands/: commands.hpp  group_commands.hpp  task_commands.hpp
include/models/: data_header.hpp  file.hpp  group.hpp  task.hpp
include/network/: client.hpp  connection_protocol.hpp  connections.hpp  server.hpp  sockets.hpp
include/utils/: regex.hpp  utils.hpp
socket/: client.cpp  server.cpp  sockets.hpp
src/: client.hpp  connections.cpp  connections.hpp  file.hpp  group.hpp  group_commands.cpp  group_commands.hpp  main.cpp  regex.cpp  regex.hpp  server.hpp  sockets.cpp  sockets.hpp  task.hpp  task_commands.cpp  task_commands.hpp  utils.cpp  utils.hpp
src/commands/: group_commands.cpp  task_commands.cpp
src/network/: connections.cpp  sockets.cpp
src/utils/: utils.cpp
tools/: tmid-install.cpp
